--- a/src/styles/_custom.scss
+++ b/src/styles/_custom.scss
@@ -1,1 +1,80 @@
 // Here you can add other styles
+h1, h2 {
+  background-color: #836a52;
+  color: #ffffff;
+  padding-bottom: 6px;
+  padding-left: 20px;
+  padding-top: 6px;
+  font-family: Georgia,Times,serif;
+  font-weight: 500;
+}
+
+h3 {
+  color: #836a52;
+  padding-bottom: 12px;
+  padding-left: 20px;
+  padding-top: 12px;
+  font-family: Georgia,Times,serif;
+  font-weight: 500;
+}
+
+h4, h5, h6 {
+  color: #b3987f;
+  padding-bottom: 12px;
+  padding-left: 20px;
+  padding-top: 12px;
+  font-family: Georgia,Times,serif;
+  font-weight: 500;
+}
+
+.card-header {
+  padding: var(--cui-card-cap-padding-y) var(--cui-card-cap-padding-x);
+  margin-bottom: 0;
+  color: #ffffff;
+  background-color: #836a52;
+  border-bottom: var(--cui-card-border-width) solid var(--cui-card-border-color);
+}
+
+.brasenose-font {
+  font-family: Georgia,Times,serif;
+  font-weight: 500;
+}
+
+p {
+  padding-left: 20px;
+}
+
+.display-font {
+  font-family: Georgia,Times,serif;
+  font-weight: 500;
+  font-size: 24px;
+}
+
+.btn-primary {
+  --cui-btn-color: rgba(255, 255, 255, 0.87);
+  --cui-btn-bg: #836a52;
+  --cui-btn-border-color: #836a52;
+  --cui-btn-hover-color: rgba(255, 255, 255, 0.87);
+  --cui-btn-hover-bg: #b3987f;
+  --cui-btn-hover-border-color: #a18164;
+  --cui-btn-focus-shadow-rgb: 75, 58, 223;
+  --cui-btn-active-color: rgba(255, 255, 255, 0.87);
+  --cui-btn-active-bg: #b3987f;
+  --cui-btn-active-border-color: #a18164;
+  --cui-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 21, 0.125);
+  --cui-btn-disabled-color: rgba(255, 255, 255, 0.87);
+  --cui-btn-disabled-bg: #836a52;
+  --cui-btn-disabled-border-color: #836a52;
+  font-family: Georgia,Times,serif;
+  font-weight: 500;
+}
+
+a {
+  color: #836a52;
+  text-decoration: underline;
+}
+
+a:hover {
+  color: #b3987f;
+  text-decoration: underline;
+}
